samples/_failures_safe/1761319221_e40d19_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc4cbb55.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_fc4cbb55.c:172: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_fc4cbb55.c:171:9: error: expected declaration or statement at end of input
  171 |         if
      |         ^~
./samples/SAFE/__tmp_fc4cbb55.c:171:9: error: expected declaration or statement at end of input
